# llm-playground

./: .gitignore  README.md
github-releaser-llm/: Cargo.toml  README.md
github-releaser-llm/.github/workflows/: release-manager.yml
github-releaser-llm/src/: github_client.rs  main.rs  openai_client.rs
llm-mcp-server-template/: README.md  pyproject.toml
llm-mcp-server-template/llm_mcp_server_template/: server.py
llm-mcp-server-template/llm_mcp_server_template/prompts/: format_location_data.txt
llm-mcp-server-template/llm_mcp_server_template/services/: http_client.py  nws_service.py  zippopotam_service.py
