[tool.poetry]
name = "llm-mcp-server-template"
version = "0.1.0"
description = ""
authors = ["Kody Buss <kody.buss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uv = "^0.6.14"
fastmcp = "^2.0.0"
mcp = {extras = ["cli"], version = "^1.6.0"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "llm-mcp-server-template"
version = "0.1.0"
description = "A template for an MCP server using FastMCP"

